--- a/gap-groupe13/stm32cubeide/gap_project.ioc
+++ b/gap-groupe13/stm32cubeide/gap_project.ioc
@@ -10,14 +10,17 @@ Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SYS
 Mcu.IP3=USART2
-Mcu.IPNb=4
+Mcu.IP4=USART6
+Mcu.IPNb=5
 Mcu.Name=STM32F401R(D-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PA2
 Mcu.Pin1=PA3
-Mcu.Pin2=PA4
-Mcu.Pin3=VP_SYS_VS_Systick
-Mcu.PinsNb=4
+Mcu.Pin2=PA5
+Mcu.Pin3=PC6
+Mcu.Pin4=PC7
+Mcu.Pin5=VP_SYS_VS_Systick
+Mcu.PinsNb=6
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401RETx
@@ -34,13 +37,18 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.USART6_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-PA2.Mode=Synchronous
+PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
-PA3.Mode=Synchronous
+PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
-PA4.Mode=Synchronous
-PA4.Signal=USART2_CK
+PA5.Locked=true
+PA5.Signal=GPIO_Output
+PC6.Mode=Asynchronous
+PC6.Signal=USART6_TX
+PC7.Mode=Asynchronous
+PC7.Signal=USART6_RX
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -73,7 +81,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_Init-USART2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_USART6_UART_Init-USART6-false-HAL-true
 RCC.AHBFreq_Value=16000000
 RCC.APB1Freq_Value=16000000
 RCC.APB2Freq_Value=16000000
@@ -94,9 +102,13 @@ RCC.VCOInputFreq_Value=1000000
 RCC.VCOOutputFreq_Value=192000000
 RCC.VcooutputI2S=96000000
 USART2.BaudRate=9600
-USART2.IPParameters=VirtualMode,WordLength,BaudRate
-USART2.VirtualMode=VM_SYNC
-USART2.WordLength=WORDLENGTH_8B
+USART2.IPParameters=VirtualMode,WordLength,BaudRate,Parity
+USART2.Parity=PARITY_EVEN
+USART2.VirtualMode=VM_ASYNC
+USART2.WordLength=WORDLENGTH_9B
+USART6.BaudRate=9600
+USART6.IPParameters=VirtualMode,BaudRate
+USART6.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
