implemtation of logs

--- a/gap-groupe13/stm32cubeide/gap_project.ioc
+++ b/gap-groupe13/stm32cubeide/gap_project.ioc
@@ -101,14 +101,16 @@ RCC.VCOI2SOutputFreq_Value=192000000
 RCC.VCOInputFreq_Value=1000000
 RCC.VCOOutputFreq_Value=192000000
 RCC.VcooutputI2S=96000000
-USART2.BaudRate=9600
+USART2.BaudRate=115200
 USART2.IPParameters=VirtualMode,WordLength,BaudRate,Parity
-USART2.Parity=PARITY_EVEN
+USART2.Parity=PARITY_NONE
 USART2.VirtualMode=VM_ASYNC
-USART2.WordLength=WORDLENGTH_9B
+USART2.WordLength=WORDLENGTH_8B
 USART6.BaudRate=9600
-USART6.IPParameters=VirtualMode,BaudRate
+USART6.IPParameters=VirtualMode,BaudRate,WordLength,Parity
+USART6.Parity=PARITY_EVEN
 USART6.VirtualMode=VM_ASYNC
+USART6.WordLength=WORDLENGTH_9B
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
