--- a/gap-groupe13/stm32cubeide/gap_project.ioc
+++ b/gap-groupe13/stm32cubeide/gap_project.ioc
@@ -88,7 +88,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_Init-USART2-false-HAL-true,4-MX_USART6_UART_Init-USART6-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_USART6_UART_Init-USART6-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true
 RCC.AHBFreq_Value=16000000
 RCC.APB1Freq_Value=16000000
 RCC.APB2Freq_Value=16000000
@@ -109,7 +109,8 @@ RCC.VCOInputFreq_Value=1000000
 RCC.VCOOutputFreq_Value=192000000
 RCC.VcooutputI2S=96000000
 USART2.BaudRate=115200
-USART2.IPParameters=VirtualMode,WordLength,BaudRate,Parity
+USART2.IPParameters=VirtualMode,WordLength,BaudRate,Parity,Mode
+USART2.Mode=MODE_TX
 USART2.Parity=PARITY_NONE
 USART2.VirtualMode=VM_ASYNC
 USART2.WordLength=WORDLENGTH_8B
@@ -122,4 +123,3 @@ VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
 isbadioc=false
-
