bucket now worksé

--- a/gap-groupe13/stm32cubeide/gap_project.ioc
+++ b/gap-groupe13/stm32cubeide/gap_project.ioc
@@ -3,6 +3,7 @@ CAD.formats=
 CAD.pinconfig=
 CAD.provider=
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32F401RET6
 Mcu.Family=STM32F4
@@ -15,15 +16,16 @@ Mcu.IP5=USART6
 Mcu.IPNb=6
 Mcu.Name=STM32F401R(D-E)Tx
 Mcu.Package=LQFP64
-Mcu.Pin0=PA2
-Mcu.Pin1=PA3
-Mcu.Pin2=PA5
-Mcu.Pin3=PC6
-Mcu.Pin4=PC7
-Mcu.Pin5=PB6
-Mcu.Pin6=PB7
-Mcu.Pin7=VP_SYS_VS_Systick
-Mcu.PinsNb=8
+Mcu.Pin0=PC0
+Mcu.Pin1=PA2
+Mcu.Pin2=PA3
+Mcu.Pin3=PA5
+Mcu.Pin4=PC6
+Mcu.Pin5=PC7
+Mcu.Pin6=PB6
+Mcu.Pin7=PB7
+Mcu.Pin8=VP_SYS_VS_Systick
+Mcu.PinsNb=9
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401RETx
@@ -31,6 +33,7 @@ MxCube.Version=6.14.1
 MxDb.Version=DB.6.0.141
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.EXTI0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -52,6 +55,8 @@ PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
 PB7.Mode=I2C
 PB7.Signal=I2C1_SDA
+PC0.Locked=true
+PC0.Signal=GPXTI0
 PC6.Mode=Asynchronous
 PC6.Signal=USART6_TX
 PC7.Mode=Asynchronous
@@ -108,6 +113,8 @@ RCC.VCOI2SOutputFreq_Value=192000000
 RCC.VCOInputFreq_Value=1000000
 RCC.VCOOutputFreq_Value=192000000
 RCC.VcooutputI2S=96000000
+SH.GPXTI0.0=GPIO_EXTI0
+SH.GPXTI0.ConfNb=1
 USART2.BaudRate=115200
 USART2.IPParameters=VirtualMode,WordLength,BaudRate,Parity,Mode
 USART2.Mode=MODE_TX
